Added table and css
Changes to table's appearance

--- a/play.html
+++ b/play.html
@@ -36,5 +36,19 @@
     <h3 class="ohano">OHANO.</h3> <p>Why didn't you tell me before?</p>
     <h3 class="zama">ZAMA.</h3>
     <p> I came to--but I be forgetting when I"</p></blockquote>
+
+<table>
+    <tr>
+        <th> Character </th>
+        <th> Actor </th>
+        <th> Understudy </th>
+    </tr>
+    <tr>
+        <td> Jordan Belfort </td>
+        <td> Leonardo DiCaprio</td>
+        <td>Johnny Depp</td>
+    </tr>
+</table>
+
 </body>
 </html>
