Added in links and second act

--- a/play.html
+++ b/play.html
@@ -37,7 +37,7 @@
     <h3 class="zama">ZAMA.</h3>
     <p> I came to--but I be forgetting when I"</p></blockquote>
 
-<table>
+<table class="table">
     <tr>
         <th> Character </th>
         <th> Actor </th>
@@ -49,6 +49,8 @@
         <td>Johnny Depp</td>
     </tr>
 </table>
+
+<a href="secondact.html"> Second Page </a>
 
 </body>
 </html>
